--- a/demo/TagDemo.less
+++ b/demo/TagDemo.less
@@ -10,7 +10,10 @@
 @import "../src/Tag.less";
 
 .demo {
-  width: 240px;
-  margin: 50px auto;
-  background-color: #fafafa;
+  width: 300px;
+  padding: 20px;
+}
+
+h2 {
+  margin: 10px 0;
 }
